adicinando os elementos dinamicamente com js

--- a/style.sass
+++ b/style.sass
@@ -62,7 +62,9 @@ header
 
   .filter
     margin-top: 3rem
-    margin-bottom: 6.4rem   
+    margin-bottom: 6.4rem
+    display: flex
+    align-items: center
 
     span
       margin-left: 1.1rem
@@ -71,7 +73,7 @@ header
       font-size: 1.4rem
       line-height: 2.2rem
 
-section.movies
+section#movies
 
   display: flex
   flex-direction: column
@@ -127,7 +129,7 @@ section.movies
         height: 3rem
         margin-left: 1rem
 
-    .description
+    .movie-description
       width: 59rem
 
       p
