--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ header .search img {
 header .filter {
   margin-top: 3rem;
   margin-bottom: 6.4rem;
+  display: flex;
+  align-items: center;
 }
 header .filter span {
   margin-left: 1.1rem;
@@ -73,13 +75,13 @@ header .filter span {
   line-height: 2.2rem;
 }
 
-section.movies {
+section#movies {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-section.movies .movie {
+section#movies .movie {
   display: flex;
   align-items: center;
   padding: 3rem;
@@ -88,55 +90,55 @@ section.movies .movie {
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);
   border-radius: 0.8rem;
 }
-section.movies .movie .movie-image {
+section#movies .movie .movie-image {
   width: 9.2rem;
   height: 9.2rem;
 }
-section.movies .movie .movie-image img {
+section#movies .movie .movie-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
 }
-section.movies .movie .movie-text {
+section#movies .movie .movie-text {
   margin-left: 6.4rem;
   margin-right: 7.4rem;
 }
-section.movies .movie .movie-text p {
+section#movies .movie .movie-text p {
   margin-bottom: 2.2rem;
   font-weight: 500;
   font-size: 1.4rem;
 }
-section.movies .movie .movie-text .icons {
+section#movies .movie .movie-text .icons {
   display: flex;
   font-weight: 400;
   font-size: 1.2rem;
 }
-section.movies .movie .movie-text img {
+section#movies .movie .movie-text img {
   width: 1.5rem;
   height: 1.5rem;
 }
-section.movies .movie .movie-text img:nth-of-type(2) {
+section#movies .movie .movie-text img:nth-of-type(2) {
   margin-left: 3rem;
   cursor: pointer;
 }
-section.movies .movie .movie-text span {
+section#movies .movie .movie-text span {
   height: 3rem;
   margin-left: 1rem;
 }
-section.movies .movie .description {
+section#movies .movie .movie-description {
   width: 59rem;
 }
-section.movies .movie .description p {
+section#movies .movie .movie-description p {
   font-weight: 500;
   font-size: 1.2rem;
   color: var(--description);
 }
-section.movies .movie:last-child {
+section#movies .movie:last-child {
   margin-bottom: 4rem;
 }
-section.movies .movie:first-child {
+section#movies .movie:first-child {
   margin-top: 0rem;
 }
 
