--- a/style.sass
+++ b/style.sass
@@ -21,6 +21,10 @@ body
   background: #17162E
   color: #fff
 
+h1.no-movie
+  font-size: 1.2rem
+  font-weight: 300
+
 header
   display: flex
   flex-direction: column
@@ -51,6 +55,8 @@ header
       width: 90%
       height: 100%
       border: none
+      font-size: 1.6rem
+      font-weight: 600
 
     input:focus
       box-shadow: 0 0 0 0
@@ -83,7 +89,9 @@ section#movies
   .movie
     display: flex
     align-items: center
+    justify-content: space-around
 
+    width: 100rem
     padding: 3rem
     margin-top: 4rem
 
@@ -93,12 +101,10 @@ section#movies
     border-radius: 0.8rem
 
     .movie-image
-      width: 9.2rem
-      height: 9.2rem
 
       img
-        width: 100%
-        height: 100%
+        width: 9.2rem
+        height: 9.2rem
         object-fit: cover
         border-radius: 50%
         box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3)
@@ -130,9 +136,11 @@ section#movies
         margin-left: 1rem
 
     .movie-description
-      width: 59rem
+      max-width: 59rem
 
       p
+        width: 59rem
+
         font-weight: 500
         font-size: 1.2rem
         color: var(--description)
